# mountaineer-di

./: Makefile  README.md  pyproject.toml
.github/scripts/: update_version.py
.github/workflows/: ci.yml
mountaineer_di/: __init__.py  annotations.py  fastapi_compat.py  markers.py  optional_fastapi.py  overrides.py  request_parsing.py  resolver.py  resolver_core.py  signatures.py
scripts/: __init__.py  fastapi_release_helper.py  latest_fastapi_versions.py
tests/: check_native.py  test_dependency_signatures.py  test_fastapi.py  test_fastapi_compat.py  test_fastapi_release_helper.py  test_mountaineer_compat.py  test_native.py  test_waymark_compat.py
