[project]
name = "mountaineer-di"
version = "0.1.0"
description = "Common dependency injection utilities for mountaineer & friends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastapi>=0.100,<1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "ty>=0.0.26",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
combine-as-imports = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001", "T201"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "check_*.py"]
